concord_macros/tests/trybuild/fail/codegen_contract/generated_public_type_collision.stderr
error: generated public API name `FooBarRequestExt` for endpoint request extension trait conflicts with endpoint request extension trait in generated module type namespace
  --> tests/trybuild/fail/codegen_contract/generated_public_type_collision.rs:15:13
   |
15 |         GET Bar
   |             ^^^
